--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: Run Tests with Caching
 
 # This workflows runs when you push code or create a pull request
 on:
@@ -12,9 +12,6 @@ jobs:
     test:
         name: Test Calculator
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                python-version: ['3.9', '3.10','3.11','3.12']
 
         steps:
             #Step 1: Get the coode from repository
@@ -22,12 +19,20 @@ jobs:
               uses: actions/checkout@v4
 
             #Step 2: Set up Python
-            - name: Set up Python ${{ matrix.python-version }}
+            - name: Set up Python 
               uses: actions/setup-python@v5
               with:
-                python-version: ${{ matrix.python-version }}
+                python-version: '3.11'
 
-            #Step 3: Install dependencies
+            #Step 3: pip dependencies
+            - name: Cache pip packages
+              uses: actions/cache@v4
+              with:
+                path: ~/.cache/pip
+                key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+                restore-keys: |
+                  ${{ runner.os }}-pip-
+
             - name: Install dependencies
               run: |
                 python -m pip install --upgrade pip
