--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests with Caching
+name: Run Tests with Secrets
 
 # This workflows runs when you push code or create a pull request
 on:
@@ -12,6 +12,11 @@ jobs:
     test:
         name: Test Calculator
         runs-on: ubuntu-latest
+
+        #Set environment variables for the entire job
+        env:
+            DEBUG_MODE: 'true'
+            DATABASE_URL: 'sqlite:///test.db'
 
         steps:
             #Step 1: Get the coode from repository
@@ -38,6 +43,8 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
 
-            #Step 4: Run the tests
+            #Step 4: Run the tests wtih secrets
             - name: Run pytest
+              env:
+                API_KEY: ${{ secrets.API_KEY }}
               run: pytest -v
