--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run Tests with Secrets
+name: Build and Test
 
 # This workflows runs when you push code or create a pull request
 on:
@@ -9,27 +9,53 @@ on:
 
 # Jobs are the work that gets done
 jobs:
-    test:
-        name: Test Calculator
+    #Job 1: Build and package
+    build:
+        name: Build Package
         runs-on: ubuntu-latest
 
-        #Set environment variables for the entire job
-        env:
-            DEBUG_MODE: 'true'
-            DATABASE_URL: 'sqlite:///test.db'
-
         steps:
-            #Step 1: Get the coode from repository
             - name: Checkout code
               uses: actions/checkout@v4
 
-            #Step 2: Set up Python
-            - name: Set up Python 
+            - name: Set up Python
               uses: actions/setup-python@v5
               with:
                 python-version: '3.11'
 
-            #Step 3: pip dependencies
+            - name: Instal build tools
+              run: pip install build
+
+            - name: Build distribution packages
+              run: pip -m build
+
+            #Upload the built package as an artifact
+            - name: Upload build artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                name: python-package
+                path: dist/
+                retention-days: 7
+
+    #Job 2: Test (depends on build)
+    test:
+        name: Run Tests
+        runs-on: ubuntu-latest
+        needs: build # This job waits for 'build' to complete
+
+        strategy:
+            matrix:
+                python-version: ['3.9', '3.10', '3.11', '3.12']
+
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v5
+              with:
+                python-version: ${{ matrix.python-version }}
+
             - name: Cache pip packages
               uses: actions/cache@v4
               with:
@@ -43,8 +69,32 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install -r requirements.txt
 
-            #Step 4: Run the tests wtih secrets
             - name: Run pytest
-              env:
-                API_KEY: ${{ secrets.API_KEY }}
-              run: pytest -v
+              run: pytest -v -s
+
+    # Job 3: Deploy (depends on test)
+    deploy:
+        name: Deploy Package
+        runs-on: ubuntu-latest
+        needs: test # This job waits for all 'test' jobs to complete
+        if: github.ref == 'refs/heads/main'   
+        # only deploys on main branch
+        
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            # Download the artifact from the build job
+            - name: Download build artifacts
+              uses: actions/download-artifact@v4
+              with:
+                name: python-package
+                path: dist/
+
+            - name: Display downloaded files
+              run: ls -la dist/
+
+            - name: Simulate deployment
+              run: echo "Deploying package to production..."
+
+        
