--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,100 +1,34 @@
-name: Build and Test
+name: Cross-Platform Testing
 
-# This workflows runs when you push code or create a pull request
 on:
-    push:
-        branches: [ main ]
-    pull_request:
-        branches: [ main ]
+  push:
+    branches: [ main ]
 
-# Jobs are the work that gets done
 jobs:
-    #Job 1: Build and package
-    build:
-        name: Build Package
-        runs-on: ubuntu-latest
+  test:
+    name: Test on ${{ matrix.os }} with Python ${{ matrix.python-version }}
+    runs-on: ${{ matrix.os }}
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ['3.9', '3.11', '3.12']
+      fail-fast: false # Continue running even if one job fails
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.11'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Instal build tools
-              run: pip install build
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
 
-            - name: Build distribution packages
-              run: python -m build
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-            #Upload the built package as an artifact
-            - name: Upload build artifacts
-              uses: actions/upload-artifact@v4
-              with:
-                name: python-package
-                path: dist/
-                retention-days: 7
+      - name: Run pytest
+        run: pytest -v
 
-    #Job 2: Test (depends on build)
-    test:
-        name: Run Tests
-        runs-on: ubuntu-latest
-        needs: build # This job waits for 'build' to complete
-
-        strategy:
-            matrix:
-                python-version: ['3.9', '3.10', '3.11', '3.12']
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Set up Python ${{ matrix.python-version }}
-              uses: actions/setup-python@v5
-              with:
-                python-version: ${{ matrix.python-version }}
-
-            - name: Cache pip packages
-              uses: actions/cache@v4
-              with:
-                path: ~/.cache/pip
-                key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-                restore-keys: |
-                  ${{ runner.os }}-pip-
-
-            - name: Install dependencies
-              run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements.txt
-
-            - name: Run pytest
-              run: pytest -v -s
-
-    # Job 3: Deploy (depends on test)
-    deploy:
-        name: Deploy Package
-        runs-on: ubuntu-latest
-        needs: test # This job waits for all 'test' jobs to complete
-        if: github.ref == 'refs/heads/main'   
-        # only deploys on main branch
-        
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            # Download the artifact from the build job
-            - name: Download build artifacts
-              uses: actions/download-artifact@v4
-              with:
-                name: python-package
-                path: dist/
-
-            - name: Display downloaded files
-              run: ls -la dist/
-
-            - name: Simulate deployment
-              run: echo "Deploying package to production..."
-
-        
