--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Cross-Platform Testing
+name: Cross-Platform Testing with include and exclude
 
 on:
   push:
@@ -6,14 +6,28 @@ on:
 
 jobs:
   test:
-    name: Test on ${{ matrix.os }} with Python ${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.11', '3.12']
-      fail-fast: false # Continue running even if one job fails
+        python-version: [ '3.9', '3.11', '3.12']
+
+        # Exclude specific combinations
+        exclude:
+          - os: macos-latest
+            python-version: '3.9'
+
+        # Include additional specific combination
+        include:
+          - os: ubuntu-latest
+            python-version: '3.13-dev'
+            experimental: true
+
+      fail-fast: false
+
+    # Allow experimental jobs to fail without failing the workflow
+    continue-on-error: ${{ matrix.experimental == true}}
 
     steps:
       - name: Checkout code
@@ -32,3 +46,4 @@ jobs:
       - name: Run pytest
         run: pytest -v
 
+      
