--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -55,3 +55,12 @@ jobs:
         env:
           API_KEY: ${{ secrets.API_KEY }}
         run: ${{ inputs.test-command }}
+
+      - name: Run tests with coverage
+        run: pytest -v --cov=calculator --cov-report=term-missing
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+            name: coverage-report
+            path: .coverage
