Fix flake8 spacing issues

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,7 +96,7 @@ jobs:
           echo "Environment: Production"
           echo "Version: ${{ github.sha }}"
 
-  test-scenatios:
+  test-scenarios:
     name: Test ${{ matrix.scenario }}
     runs-on: ubuntu-latest
 
